--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "projekt-leverans",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -11,6 +12,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "better-sqlite3": "^7.4.3",
+    "body-parser": "^1.19.0",
+    "crypto-js": "^4.1.1",
     "express": "^4.17.1",
     "node": "^16.6.1",
     "nodemon": "^2.0.12",
@@ -43,6 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:3000"
+  }
 }
