--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^12.8.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.1",
+    "crypto-js": "^4.1.1",
     "node": "^16.6.1",
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sqlite3": "^5.0.2",
