--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.1",
     "crypto-js": "^4.1.1",
+    "dotenv": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "node": "^16.9.1",
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
