--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:4000",
+  "homepage": "./",
+  "main": "./electron/main.js",
   "dependencies": {
+    "@electron/remote": "^2.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -13,8 +16,12 @@
     "@testing-library/user-event": "^12.8.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.1",
+    "concurrently": "^6.2.2",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
+    "electron": "^15.0.0",
+    "electron-builder": "^22.11.7",
+    "electron-is-dev": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "node": "^16.9.1",
@@ -28,13 +35,16 @@
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
     "sqlite3": "^5.0.2",
+    "wait-on": "^6.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron .\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "ebuild": "npm run build && node_modules/.bin/build"
   },
   "eslintConfig": {
     "extends": [
